--- a/css/style.css
+++ b/css/style.css
@@ -46,13 +46,30 @@ section{
     padding: 5rem 9%;
 }
 
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .9rem 3rem;
+    border-radius: .5rem;
+    color: #fff;
+    background: var(--cor3);
+    font-size: 1.7rem;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+.btn:hover{
+    background: var(--cor4);
+}
+
+/* INICIO BARRA DE MENU */
 
 .topo .topo-1{
     background: #fff;
-    padding: 1.5rem;
+    padding:1.5rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .topo .topo-1 .logo{
@@ -110,4 +127,231 @@ section{
     color: var(--cor2);
 }
 
+.botao-pesquisar{
+    display: none;
+}
+/* FIM TOPO-1 */
 
+
+/* INICIO TOPO-2 */
+
+.topo .topo-2{
+    background: var(--cor4);
+}
+
+.topo .topo-2 .menu-nav{
+    text-align: center;
+}
+
+.topo .topo-2 .menu-nav a{
+    color: #fff;
+    display: inline-block;
+    padding: 1.2rem;
+    font-size: 1.7rem;
+}
+
+.topo .topo-2 .menu-nav a:hover{
+    background: var(--cor2);
+}
+
+.topo .topo-2 .active{
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    z-index: 1000;
+}
+/* FIM TOPO-2 */
+
+/* INICIO BARRA-MENU */
+.barra-menu{
+    text-align: center;
+    background: var(--cor2);
+    position: fixed;
+    bottom: 0; left: 0; right: 0;
+    z-index: 1000;
+    display: none;
+}
+
+.barra-menu a{
+    font-size: 2.5rem;
+    padding: 2rem;
+    color: #fff;
+}
+
+.barra-menu a:hover{
+    background: var(--cor4);
+}
+/* FIM BARRA-MENU */
+
+
+/* INICIO LOGIN-FORM */
+.login-form-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255,.9);
+    position: fixed;
+    top: 0; right: -105%;
+    z-index: 1000;
+    height: 100%;
+    width: 100%;
+}
+
+.login-form-container.active{
+    right: 0;
+}
+
+.login-form-container form{
+    background: #fff;
+    border: var(--border);
+    width: 40rem;
+    padding: 2rem;
+    box-sizing: var(--box-shadow);
+    border-radius: .5rem;
+    margin: 2rem;
+}
+
+.login-form-container form h3{
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    color: var(--cor6);
+    text-align: center;
+}
+
+.login-form-container form span{
+   display: block; 
+   font-size: 1.5rem;
+   padding-top: 1rem;
+}
+
+.login-form-container form .box{
+    width: 100%;
+    margin: .7rem 0;
+    font-size: 1.6rem;
+    border: var(--border);
+    border-radius: 5rem;
+    padding: 1rem 1.2rem;
+    color: var(--cor6);
+    text-transform: none;
+}
+
+.login-form-container form .checkbox{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem 0;
+}
+
+.login-form-container form .checkbox label{
+    font-size: 1.5rem;
+    color: var(--cor6);
+    cursor: pointer;
+}
+
+.login-form-container form .btn{
+    text-align: center;
+    width: 100%;
+    margin: 1.5rem 0;
+}
+
+.login-form-container form p{
+    padding-top: 2.5rem;
+    color: var(--cor6);
+    font-size: 1.5rem;
+}
+
+.login-form-container form p a{
+    color: var(--cor6);
+    text-decoration: underline;
+}
+
+.login-form-container #close-login-btn{
+    position: absolute;
+    top: 1.5rem; right: 2.5rem;
+    font-size: 5rem;
+    color: var(--cor6);
+    cursor: pointer;
+}
+/* FIM LOGIN-FORM */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* MEDIA QUERIES */
+
+@media (max-width: 991px){
+    html{
+        font-size: 55%;
+    }
+
+    .topo .topo-2{
+        padding: 2rem;
+    }
+
+    section{
+        padding: 3rem 2rem;
+    }
+}
+
+@media (max-width: 768px){
+    html{
+        scroll-padding-top: 0;
+    }
+
+    body{
+        padding-bottom: 6rem;
+    }
+
+    .topo .topo-2{
+        display: none;
+    }
+
+    .barra-menu{
+        display: block;
+    }
+
+    #botao-pesquisar{
+        display: inline-block;
+    }
+
+    .topo .topo-1{
+        box-shadow: var(--box-shadow);
+        position: relative;
+    }
+
+    .topo .topo-1 .form-pesquisa{
+        position: absolute;
+        top: -115%; right: 2rem;
+        width: 90%;
+        box-shadow: var(--box-shadow);
+    }
+
+    .topo .topo-1 .form-pesquisa.active{
+        top: 115%;
+    }
+
+
+}
+
+
+@media (max-width: 450px){
+
+    html{
+        font-size: 50%;
+    }
+}
