--- a/css/style.css
+++ b/css/style.css
@@ -7,24 +7,24 @@
     --box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
 
     
-    --cor1: #89ABD9;
+    /* --cor1: #89ABD9;
     --cor2: #3D90D9;
     --cor3: #2A6BBF;
     --cor4: #155FBF;
     --cor5: #736555;
-    --cor6: #444;
+    --cor6: #444; */
 
-    --cor1: #6D0000;
+    /* --cor1: #6D0000;
     --cor2: #8D0000;
     --cor3: #E6E6E6;
     --cor4: #4F4F4F;
-    --cor5: #080409;
+    --cor5: #080409; */
 
-    --cor1: #AEEBF2;
+    /* --cor1: #AEEBF2;
     --cor2: #99D0F2;
     --cor3: #46658C;
     --cor4: #021140;
-    --cor5: #010326;
+    --cor5: #010326; */
     
 }
 
