--- a/css/style.css
+++ b/css/style.css
@@ -343,42 +343,31 @@ section{
     background: linear-gradient(15deg, #eee 30%, #fff 30.1%);
  }
 
- .produtos .produtos-slider .box:hover .image{
-    transform: translateY(6rem);
- }
-
  .produtos .produtos-slider .box .image img{
     height: 18rem;
  }
 
-
- .produtos .produtos-slider .box .icons{
-    border-bottom: var(--border-hover);
-    position: relative;
-    top: 0; left: 0; right: 0;
-    background: #fff;
-    z-index: 1;
-    transform: translateY(-105%);
- }
-
- .produtos .produtos-slider .box:hover .icons{
-    transform: translateY(-0%);
- }
-
  .produtos .produtos-slider .box .icons a{
-    color: var(--cor6);
-    font-size: 2.2rem;
-    padding: 1rem 1.5rem;
+    color: var(--cor4);
+    font-size: 3.2rem;
+    padding: .1rem ;
+    position: absolute;
+    right: .1rem;
  }
 
  .produtos .produtos-slider .box .icons a:hover{
-    background: var(--cor3);
-    color: #fff;
+    background: var(#fff);
+    color: var(--cor1);
  }
 
  .produtos .produtos-slider .box .conteudo{
     background: #eee;
     padding: 2.5rem;
+ }
+
+ .produtos .produtos-slider .box .conteudo h3{
+    font-size: 2.2rem;
+    padding: .5rem;
  }
 
  .produtos .produtos-slider .box .conteudo .preco{
@@ -387,13 +376,6 @@ section{
     padding-top: 1rem;
  }
 
-
- .produtos .produtos-slider .box .icons{
-    border-bottom: var(--border-hover);
-    position: absolute;
-    top: 2rem; left: 62rem;
-    z-index: 1;
- }
 
  .swiper-button-next,
 .swiper-button-prev{
