--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,8 @@ section {
 
 /* INICIO BARRA DE MENU */
 
+
+
 .topo .topo-1 {
     background: #fff;
     padding: 1.5rem 12%;
@@ -116,7 +118,7 @@ section {
 }
 
 .topo .topo-1 .form-pesquisa {
-    width: 50rem;
+    width: 48rem;
     height: 5rem;
     border: var(--border);
     overflow: hidden;
@@ -328,7 +330,7 @@ img {
     width: 100vw;
     padding-right: 4.5rem;
     margin-top: 1.5rem;
-    height: 60vh;
+    height: 45vh;
    
 }
 
@@ -374,30 +376,30 @@ img {
 /* COMEÇO SECTION PRODUTOS  */
 
 .produtos .produtos-slider .box {
-    margin: 2rem 0;
+    margin: 1rem 0;
     position: relative;
     overflow: hidden;
-    border: var(--border);
+    border: var(--border-hover);
     text-align: center;
-
 }
 
 .produtos .produtos-slider .box:hover {
-    border: var(--border-hover);
+    border: var(--border);
+    
 }
 
 .produtos .produtos-slider .box .image {
     padding: 1rem;
-    background: linear-gradient(15deg, #eee 30%, #fff 30.1%);
+    background: linear-gradient(35deg, #eee 30%, #fff 30.1%);
 }
 
 .produtos .produtos-slider .box .image img {
-    height: 18rem;
+    height: 15rem;
 }
 
 .produtos .produtos-slider .box .icons a {
     color: var(--cor4);
-    font-size: 3.2rem;
+    font-size: 2.4rem;
     padding: .1rem;
     position: absolute;
     right: .1rem;
@@ -406,6 +408,7 @@ img {
 .produtos .produtos-slider .box .icons a:hover {
     background: var(#fff);
     color: var(--cor1);
+    border: var(--border-hover);
 }
 
 .produtos .produtos-slider .box .conteudo {
@@ -419,7 +422,7 @@ img {
 }
 
 .produtos .produtos-slider .box .conteudo .preco {
-    font-size: 2.2rem;
+    font-size: 2rem;
     color: var(--cor6);
     padding-top: 1rem;
 }
@@ -456,6 +459,7 @@ img {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    
 }
 
 .news form {
@@ -522,8 +526,15 @@ img {
         padding: 3rem 2rem;
     }
 
-    .topo .topo-1 .form-pesquisa {
+    /* .topo .topo-1 .form-pesquisa {
         width: 55%;
+    } */
+
+    .banner-slider img {
+        width: 100%;
+        height: 30rem;
+        margin-top: 2rem;
+        
     }
 
     
@@ -538,10 +549,6 @@ img {
     body {
         padding-bottom: 6rem;
     }
-
-    /* .topo .topo-1 .form-pesquisa{
-        width: 30rem;
-    } */
 
     .topo .topo-2 {
         display: none;
@@ -585,7 +592,6 @@ img {
         width: 100%;
         height: 25rem;
         margin-top: 6rem;
-        display: flex;
     }
 
 }
@@ -607,7 +613,6 @@ img {
         width: 100%;
         height: 20rem;
         margin-top: 6rem;
-        display: flex;
 
     }
 }
