--- a/css/style.css
+++ b/css/style.css
@@ -595,6 +595,14 @@ img {
 /* FINAL SECTION OFERTAS  */
 
 
+.marcas-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+    gap: 1.5rem;
+    background-color: rgb(226, 222, 222);
+}
+
+
 
 
 
