--- a/css/style.css
+++ b/css/style.css
@@ -7,43 +7,40 @@
     --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 
 
+    --cor: #080409;
+    --cor6: #223059;
+    --cor4: #BF0426;
+    --cor2: #011C40;
+    --cor3: #021140;
+    
+    --cor: #c30303;
     --cor: #89ABD9;
     --cor: #3D90D9;
     --cor: #2A6BBF;
     --cor: #155FBF;
     --cor: #736555;
     --cor: #444;
-
-    --cor2: #c30303;
     --cor: #df2d2d;
     --cor: #E6E6E6;
     --cor: #4F4F4F;
-    --cor: #080409;
-
     --cor: #AEEBF2;
     --cor: #99D0F2;
     --cor: #46658C;
-    --cor: #021140;
     --cor: #010326;
-
     --cor: #BF0426;
     --cor: #e23a3a;
     --cor: #011C40;
     --cor: #023E73;
     --cor: #0D0D0D;
-
-
     --cor: #91F2E9;
     --cor: #415AA6;
-    --cor: #223059;
     --cor: #354B8C;
     --cor: #F21667;
-
-    /* --cor2: #3E95FA; */
+    --cor: #3E95FA;
     --cor: #2855DB;
     --cor: #171AF5;
     --cor: #DB5F18;
-    --cor4: #FA4700;
+    --cor: #FA4700;
 
 
 }
