--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@
     --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 
 
-    --cor: #080409;
+    --cor1: #080409;
     --cor6: #223059;
     --cor4: #BF0426;
     --cor2: #011C40;
     --cor3: #021140;
     
-    --cor: #c30303;
+    /* --cor: #c30303;
     --cor: #89ABD9;
     --cor: #3D90D9;
     --cor: #2A6BBF;
@@ -40,7 +40,7 @@
     --cor: #2855DB;
     --cor: #171AF5;
     --cor: #DB5F18;
-    --cor: #FA4700;
+    --cor: #FA4700; */
 
 
 }
